# robproj

./: README.md
robproj1/: CMakeLists.txt  package.xml
robproj1/demos/: demo.cpp  demo.py
robproj1/include/robproj1/: cos_signal.hpp
robproj1/src/: cos_signal.cpp
robproj1/srcpy/: CMakeLists.txt  package.xml  wrappers.cpp
robproj1/srcpy/demos/: demo.cpp  demo.py
robproj1/srcpy/include/robproj1/: cos_signal.hpp
robproj1/srcpy/src/: cos_signal.cpp
robproj2/: CMakeLists.txt  README.md  package.xml
robproj2/demos/: period_report  plot_cos_values  readme.md  run_cos
robproj2/include/robproj2/: run_cos_signal.hpp  run_cos_signal_periods.hpp
robproj2/python/robproj2/: __init__.py  readme.txt
robproj2/src/: run_cos_signal.cpp  run_cos_signal_periods.cpp
robproj2/srcpy/: wrappers.cpp
